Added compatibility with Java 8 (the most popular).