@@ -1,37 +1,36 @@
 package org.ev3nt.classes;
 
-import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class ResourceLoader {
     static public InputStream getResourceAsStream(Path name) {
         return ResourceLoader.class.getResourceAsStream("/" + name.toString().replace("\\", "/"));
     }
 
-    static public String getResourceAsString(Path name) {
-        InputStream stream = ResourceLoader.getResourceAsStream(name);
-        StringBuilder builder = new StringBuilder();
-
-        if (stream != null) {
-            BufferedReader reader = new BufferedReader(new InputStreamReader(stream));
-            String line = null;
-
-            try {
-                while ((line = reader.readLine()) != null) {
-                    builder.append(line);
-                    builder.append(System.lineSeparator());
-                }
-            } catch (IOException e) {
-//            throw new RuntimeException(e);
-            }
-        }
-
-        return builder.toString();
-    }
+//    static public String getResourceAsString(Path name) {
+//        InputStream stream = ResourceLoader.getResourceAsStream(name);
+//        StringBuilder builder = new StringBuilder();
+//
+//        if (stream != null) {
+//            BufferedReader reader = new BufferedReader(new InputStreamReader(stream));
+//            String line;
+//
+//            try {
+//                while ((line = reader.readLine()) != null) {
+//                    builder.append(line);
+//                    builder.append(System.lineSeparator());
+//                }
+//            } catch (IOException e) {
+////            throw new RuntimeException(e);
+//            }
+//        }
+//
+//        return builder.toString();
+//    }
 
     static public void extract(Path name, Path destination) {
         Path destinationPath = destination.resolve(name);
@@ -47,6 +46,6 @@ public class ResourceLoader {
     }
 
     static public void extract(Path name) {
-        extract(name, Path.of(""));
+        extract(name, Paths.get(""));
     }
 }
