@@ -1,10 +1,9 @@
 package org.ev3nt.classes;
 
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Map;
 import java.util.TreeMap;
 import java.util.zip.ZipEntry;
@@ -12,11 +11,11 @@ import java.util.zip.ZipInputStream;
 import java.util.zip.ZipOutputStream;
 
 public class ZipCustomCopy implements AutoCloseable {
-    public ZipCustomCopy(String destination, String source) throws FileNotFoundException {
+    public ZipCustomCopy(String destination, String source) throws IOException {
         contentMap = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
 
-        inputStream = new ZipInputStream(new FileInputStream(source));
-        outputStream = new ZipOutputStream(new FileOutputStream(destination));
+        inputStream = new ZipInputStream(Files.newInputStream(Paths.get(source)));
+        outputStream = new ZipOutputStream(Files.newOutputStream(Paths.get(destination)));
     }
 
     @Override
@@ -33,9 +32,15 @@ public class ZipCustomCopy implements AutoCloseable {
                 continue;
             }
 
+            zipEntry = new ZipEntry(zipEntry.getName());
             outputStream.putNextEntry(zipEntry);
 
-            inputStream.transferTo(outputStream);
+            int c;
+            while ((c = inputStream.read()) != -1) {
+                outputStream.write(c);
+            }
+
+            outputStream.closeEntry();
         }
         
         inputStream.close();
@@ -43,7 +48,7 @@ public class ZipCustomCopy implements AutoCloseable {
     }
 
     public void add(String name, byte[] b) {
-        Path path = Path.of(name);
+        Path path = Paths.get(name);
         contentMap.put(path.subpath(0, path.getNameCount()).toString().replace("\\", "/"), b);
     }
 
